<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin_twenty">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextViewStyle"
        android:text="Local Host"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLocalHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty"
        android:hint="@string/local_host"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="0dp"
        android:paddingEnd="0dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="@dimen/text_size_small" />

        <View
            android:layout_width="@dimen/margin_twenty"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/text_color_secondary"
            android:text="@string/clear"
            android:textSize="@dimen/text_size_small" />

        <View
            android:layout_width="@dimen/margin_twenty"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/textError"
            android:text="@string/cancel"
            android:textSize="@dimen/text_size_small" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>