<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/textContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="start"
            android:text="@string/create_a_new_account"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/editTextDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/display_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="0dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="0dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="0dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="25"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="98dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/create"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline50"
        tools:enabled="@{true}" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLoginHere"
        style="@style/TextViewStyle"
        android:layout_marginTop="@dimen/margin_twenty"
        android:text="@string/text_already_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/viewProgress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/guideline50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline50"
        app:matProg_barColor="@color/colorPrimaryDark"
        app:matProg_barWidth="5dp"
        app:matProg_circleRadius="@dimen/spinner_radius"
        app:matProg_progressIndeterminate="true"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

</androidx.constraintlayout.widget.ConstraintLayout>